--- a/config.yml
+++ b/config.yml
@@ -28,14 +28,20 @@ google_analytics_id:
 title: "Salamandre85"
 
 # Avatar image path
-avatar: "./images/profile.jpeg"
+avatar: "./images/Banner.png"
 
 # Name section text
 name: "@salamandre85"
 
 # Tagline section text
 tagline: >-
-    Saul Sambono: Multidisciplinary artist in Canberra, Australia — appearing as (The)Salamandre85, Strongman Sadman, and frank_Blitz
+    Saul Sambono: Multidisciplinary artist in Canberra, Australia — appearing as 
+    
+    (The)Salamandre85, 
+    
+    Strongman Sadman, 
+    
+    and frank_Blitz
 
 # List of links
 # icon: Use Font Awesome icons (https://fontawesome.com/search?o=r&m=free)
@@ -122,9 +128,13 @@ socials:
 
 # Footer text
 footer: >
-    Hi there! Follow me on my socials
+    Hi 👋 I'm Saul Sambono. I'm a creator living in the Australian Capital Territory 
+    
+    I make works and perform under the names Salamandre85, Strongman Sadman, and frank_Blitz
+
+    My social network is currently under renovation, but the best places to follow me are Instagram and BlueSky
 
 # Footer copyright message
 # Linkyee is a 100% free, open-source project—feel free to modify the copyright message as you like. :)
 copyright: >
-  © 2024  <a href="https://saulsambono.info" target="_blank">Saul Sambono</a>. Powered by <a href="https://github.com/ZhgChgLi/linkyee" target="_blank">linkyee</a>
+  © 2025  <a href="https://saulsambono.info" target="_blank">Saul Sambono</a>. Powered by <a href="https://github.com/ZhgChgLi/linkyee" target="_blank">linkyee</a>
