--- a/config.yml
+++ b/config.yml
@@ -70,6 +70,13 @@ links:
       alt: "Strongman Sadman's Instagram"
       target: "_blank"
   - link:
+      icon: "fa-brands fa-soundcloud"
+      text: "Demos & sonic experiments"
+      url: "https://soundcloud.com/saul-sambono/"
+      title: "Soundcloud"
+      alt: "frank_Blitz on Soundcloud"
+      target: "_blank"
+  - link:
       icon: "fa-brands fa-youtube"
       text: "Salamandre85 streaming games and tech" 
       url: "https://www.youtube.com/@thesalamandre85"
