Change HTML title

--- a/config.yml
+++ b/config.yml
@@ -28,7 +28,7 @@ plugins:
 google_analytics_id:
 
 # HTML Title
-title: "Salamandre85"
+title: "Saul Sambono: Multidisciplinary artist"
 
 # Avatar image path
 avatar: "./images/Banner.png"
